AC_INIT(configure.in)

IRMO_MAJOR_VERSION=1
IRMO_MINOR_VERSION=1
IRMO_MICRO_VERSION=0
IRMO_VERSION=${IRMO_MAJOR_VERSION}.${IRMO_MINOR_VERSION}.${IRMO_MICRO_VERSION}

AM_INIT_AUTOMAKE(irmo, $IRMO_VERSION, no-define)

AC_PROG_CC
AC_PROG_INSTALL
AC_HEADER_STDC
AC_PROG_LIBTOOL
AC_PROG_LEX

GLIB_REQUIRED=2.0.0
PKG_CHECK_MODULES(MODULES, glib-2.0 >= $GLIB_REQUIRED gmodule-2.0 >= $GLIB_REQUIRED gthread-2.0 >= $GLIB_REQUIRED)
AC_SUBST(MODULES_LIBS)
AC_SUBST(MODULES_CFLAGS)

dnl ipv6 check
AC_ARG_ENABLE(ipv6,
[  --enable-ipv6           Use ipv6, if available.  [default=yes]],enable_ipv6=$enableval,enable_ipv6=yes)

AC_MSG_CHECKING(whether to enable ipv6)

if test "x$enable_ipv6" = "xyes" ; then
	AC_TRY_COMPILE([#define INET6
#include <sys/types.h>
#include <netinet/in.h>],
		[int x = IPPROTO_IPV6; struct in6_addr a;],
		[ts_cv_ipv6="yes"], [ts_cv_ipv6="no"])
else
	ts_cv_ipv6="no"
fi

AC_MSG_RESULT($ts_cv_ipv6)

if test "x$ts_cv_ipv6" = "xyes"; then
	AC_DEFINE(USE_IPV6)
fi

AC_OUTPUT([
	Makefile
	src/Makefile
	src/public/Makefile
	irmo.pc
])

