
AC_INIT(Irmo, 1.2.0, fraggle@users.sourceforge.net, irmo)

AM_INIT_AUTOMAKE($PACKAGE_TARNAME, $PACKAGE_VERSION, no-define)

AC_PROG_CC
AC_PROG_INSTALL
AC_HEADER_STDC
AC_PROG_LIBTOOL
AM_PROG_LEX

OPT_LEVEL=2

# If this is gcc, we have some options we'd like to turn on.  Turn on 
# optimisation and debugging symbols.

if test "$GCC" = "yes"
then
        CFLAGS="-O$OPT_LEVEL -g -Wall $orig_CFLAGS"
fi

dnl ipv6 check
AC_ARG_ENABLE(ipv6,
[  --enable-ipv6           Use ipv6, if available.  [default=yes]],enable_ipv6=$enableval,enable_ipv6=yes)

AC_MSG_CHECKING(whether to enable ipv6)

if test "x$enable_ipv6" = "xyes" ; then
	AC_TRY_COMPILE([#define INET6
#include <sys/types.h>
#include <netinet/in.h>],
		[int x = IPPROTO_IPV6; struct in6_addr a;],
		[ts_cv_ipv6="yes"], [ts_cv_ipv6="no"])
else
	ts_cv_ipv6="no"
fi

AC_MSG_RESULT($ts_cv_ipv6)

if test "x$ts_cv_ipv6" = "xyes"; then
	AC_DEFINE([USE_IPV6], [], [IPv6 support])
fi

AC_CHECK_FUNCS(vasprintf)
AM_CONFIG_HEADER(config.h:config.h.in)

AC_OUTPUT([
	Makefile
	doc/Makefile
	src/Makefile
        src/arch/Makefile
        src/algo/Makefile
        src/base/Makefile
        src/include/Makefile
        src/include/irmo/Makefile
        src/interface/Makefile
        src/net/Makefile
        src/netbase/Makefile
        src/world/Makefile
	irmo.pc
])

