noinst_LTLIBRARIES=libirmoalgo.la

libirmoalgo_la_CFLAGS=-I.. -I../include
libirmoalgo_la_SOURCES=                                     \
       hashtable.c            hashtable.h                   \
       hash-pointer.c         hash-pointer.h                \
       arraylist.c            arraylist.h                   \
                              algo.h                        \
       compare-pointer.c      compare-pointer.h             \
       compare-string.c       compare-string.h              \
       hash-string.c          hash-string.h                 \
       slist.c                slist.h                       \
       queue.c                queue.h                       

