noinst_LIBRARIES=libirmoarch.a

libirmoarch_a_CFLAGS=-I.. -I../include
libirmoarch_a_SOURCES=                                      \
       arch-asprintf.c        arch-asprintf.h               \
                              arch.h                        \
                              sysheaders.h                  \
       arch-time.c            arch-time.h                   

