noinst_LTLIBRARIES=libirmoarch.la

libirmoarch_la_CFLAGS=-I.. -I../include
libirmoarch_la_SOURCES=                                     \
       arch-asprintf.c        arch-asprintf.h               \
                              arch.h                        \
                              sysheaders.h                  \
       arch-time.c            arch-time.h                   

