noinst_LTLIBRARIES=libirmobase.la

libirmobase_la_CFLAGS=-I.. -I../include
libirmobase_la_SOURCES=                                    \
       callback.c             callback.h                   \
       error.c                error.h                      \
       util.c                 util.h                       \
       iterator.c             iterator.h

