noinst_LTLIBRARIES=                                        \
        libirmobinding.la

libirmobinding_la_CFLAGS=-I.. -I../include
libirmobinding_la_SOURCES=                                 \
        binding.c               binding.h                  \
        struct.c                struct.h                   \
        struct-member.c         struct-member.h

