
noinst_LIBRARIES = libirmocommon.a

libirmocommon_a_SOURCES =                \
common.h                                 \
arraylist.c         arraylist.h          \
compare-string.c    compare-string.h     \
compare-pointer.c   compare-pointer.h    \
hash-string.c       hash-string.h        \
hash-pointer.c      hash-pointer.h       \
hashtable.c         hashtable.h          \
queue.c             queue.h              \
slist.c             slist.h              \
util.c              util.h


