noinst_LTLIBRARIES=                                        \
	libirmointerfaceparser.la

libirmointerfaceparser_la_CFLAGS=-I.. -I../include
libirmointerfaceparser_la_SOURCES=                         \
	parser.l                                           \
	buffer-input.c                                     \
	file-input.c

