noinst_LIBRARIES=libirmointerface.a

libirmointerface_a_CFLAGS=-I.. -I../include
libirmointerface_a_SOURCES=                                 \
       interface.c            interface.h                   \
       method.c               method.h                      \
       method-arg.c           method-arg.h                  \
       class.c                class.h                       \
       class-var.c            class-var.h                   \
       interface-parser.l                                    

