noinst_LTLIBRARIES=                                        \
       libirmointerface.la                                 \
       libirmointerfaceparser.la

libirmointerfaceparser_la_CFLAGS=-I.. -I../include
libirmointerfaceparser_la_SOURCES=                         \
       interface-parser.l                                    

libirmointerface_la_CFLAGS=-I.. -I../include
libirmointerface_la_SOURCES=                               \
       interface.c            interface.h                  \
       method.c               method.h                     \
       method-arg.c           method-arg.h                 \
       class.c                class.h                      \
       class-var.c            class-var.h                  \
       serialize.c

