noinst_LIBRARIES=libirmonet.a

libirmonet_a_CFLAGS=-I.. -I../include
libirmonet_a_SOURCES=                                       \
       sendatom_method.c                                    \
       sendatom_change.c                                    \
       socket.c               socket.h                      \
       connection.c           connection.h                  \
       sendatom_destroy.c                                   \
                              protocol.h                    \
       sendatom_null.c                                      \
       sendatom_newobject.c                                 \
       client_sendq.c                                       \
       client.c               client.h                      \
       client_run.c                                         \
       proto_build.c                                        \
       proto_verify.c                                       \
       server.c               server.h                      \
       sendatom.c             sendatom.h                    \
       sendatom_sendwindow.c                                \
       proto_parse.c                                        

