noinst_LTLIBRARIES=libirmonet.la

libirmonet_la_CFLAGS=-I.. -I../include
libirmonet_la_SOURCES=                                      \
       sendatom_method.c                                    \
       sendatom_change.c                                    \
       connection.c           connection.h                  \
       sendatom_destroy.c                                   \
                              protocol.h                    \
       sendatom_null.c                                      \
       sendatom_newobject.c                                 \
       sendatom_sendwindow.c                                \
       sendatom_syncpoint.c                                 \
       client_sendq.c         client_sendq.h                \
       client.c               client.h                      \
       client_run.c                                         \
       proto_build.c                                        \
       proto_verify.c                                       \
       server.c               server.h                      \
       server-world.c         server-world.h                \
       server-lowlevel.c                                    \
       sendatom.c             sendatom.h                    \
       proto_parse.c                                        

