noinst_LTLIBRARIES=libirmonetbase.la

libirmonetbase_la_CFLAGS=-I.. -I../include
libirmonetbase_la_SOURCES=                                  \
       packet.c               packet.h                      \
       net-address.c          net-address.h                 \
       net-socket.c           net-socket.h                  \
       module_ip.c

