noinst_LIBRARIES=libirmoworld.a

libirmoworld_a_CFLAGS=-I.. -I../include
libirmoworld_a_SOURCES=                                     \
       world.c                world.h                       \
       method.c               method.h                      \
       callback.c             callback.h                    \
       object.c               object.h                      

