noinst_LTLIBRARIES=libirmoworld.la

libirmoworld_la_CFLAGS=-I.. -I../include
libirmoworld_la_SOURCES=                                    \
       world.c                world.h                       \
       method.c               method.h                      \
       callback-data.c        callback-data.h               \
       object.c               object.h                      

