noinst_LTLIBRARIES=libirmoworld.la

libirmoworld_la_CFLAGS=-I.. -I../include
libirmoworld_la_SOURCES=                                    \
       object-callback-data.c object-callback-data.h        \
       class-callback-data.c  class-callback-data.h         \
       method.c               method.h                      \
       world.c                world.h                       \
       object.c               object.h                      \
       binding.c              binding.h

