libirmoincludedir = $(includedir)/irmo/2
libirmoinclude2dir = $(libirmoincludedir)/irmo

libirmoinclude2_HEADERS=                                           \
        callback.h     connection.h  object.h  socket.h            \
        client.h       interface.h   server.h  world.h             \
        method.h       error.h       types.h                       \
        net-module.h   packet.h 

