libirmoincludedir = $(includedir)/irmo/2
libirmoinclude2dir = $(libirmoincludedir)/irmo

libirmoinclude2_HEADERS=                                   \
        callback.h                                         \
        client.h                                           \
        connection.h                                       \
        error.h                                            \
        interface.h                                        \
        interface-parser.h                                 \
        iterator.h                                         \
        method.h                                           \
        module_ip.h                                        \
        net-module.h                                       \
        object.h                                           \
        packet.h                                           \
        server.h                                           \
        types.h                                            \
        world.h

